update finact item

--- a/items/item/item-list.phtml
+++ b/items/item/item-list.phtml
@@ -2,10 +2,22 @@
 	<div class="fgta-page-title">Daftar Item</div>
 
 	<div id="pnl_list-pnl_head" style="display: flex; align-items: flex-end">
-		<!-- Simple Query -->
+		<?php
+		$customheadbutton = __DIR__.'/item-list-customheadbutton.phtml'; 
+		if (is_file($customheadbutton)) {
+			include $customheadbutton;
+		} else { ?>
 		<div class="list-buttonbaru" style="text-align: right; width: calc(100% - 10px); float: right;  position: absolute">
 			<a href="javascript:void(0)" id="pnl_list-btn_new" class="easyui-linkbutton c8" style="width: 60px">Baru</a>
 		</div>
+		<?php } ?>
+
+		<?php
+		$customsearch = __DIR__.'/item-list-customsearch.phtml'; 
+		if (is_file($customsearch)) {
+			include $customsearch;
+		} else { ?>
+		<!-- Simple Query -->
 		<div class="list-search-wrap" style="width: calc(100% - 65px); display: flex;">
 			<div class="list-search-item" style="width: 50px;">Cari</div>
 			<div class="list-search-item">
@@ -15,11 +27,18 @@
 				<a href="javascript:void(0)" id="pnl_list-btn_load" class="easyui-linkbutton c8" style="width: 45px">Load</a>
 			</div>
 		</div>
+		<?php } ?>
 	</div>
 
 
 	<div style="margin-top: 10px">
 		<table id="pnl_list-tbl_list" paging="true" cellspacing="0" width="100%" class="deftable">
+			<?php
+			$customview = __DIR__.'/item-list-customview.phtml'; 
+			if (is_file($customview)) {
+				include $customview;
+			} else { ?>
+
 			<thead>
 				<tr>
 					<th mapping="item_id">item_id</th>
@@ -38,9 +57,25 @@
 
 				</tr>
 			</thead>
+
+			<?php } ?>
+
 		</table>
 	</div>
 
 
+	<?php
+	$customfootbutton = __DIR__.'/item-list-customfootbutton.phtml'; 
+	if (is_file($customfootbutton)) {
+		include $customfootbutton;
+	} 
+	?>	
+
+	<?php
+	$custompagefooter = __DIR__.'/item-list-custompagefooter.phtml'; 
+	if (is_file($custompagefooter)) {
+		include $custompagefooter;
+	} 
+	?>	
 
 </div>
